[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Classes/stats_manager.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Mesh/MeshWrapper.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Player/player.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Classes/stats.gd" type="Script" id=5]
[ext_resource path="res://Scenes/ItemListener/item_listener.gd" type="Script" id=6]

[sub_resource type="CapsuleShape" id=1]
radius = 0.293421
height = 0.272576

[node name="Player" type="KinematicBody"]
script = ExtResource( 3 )
max_health = 10

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0.431222, 0 )
shape = SubResource( 1 )

[node name="CostumeInterface" parent="." instance=ExtResource( 2 )]

[node name="Stats" type="Node" parent="."]
script = ExtResource( 1 )

[node name="CurrentStats" type="Node" parent="Stats"]
script = ExtResource( 5 )

[node name="BaseStats" type="Node" parent="Stats"]
script = ExtResource( 5 )

[node name="BonusStats" type="Node" parent="Stats"]
script = ExtResource( 5 )

[node name="ItemListener" type="Node" parent="."]
script = ExtResource( 6 )
